finish wb pages

--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
           <div role="tabpanel" class="tab-pane" id="ordering-tab">
             <div class="row">
               <div class="col-sm-3 contact-method">
-                <h3 class="bold">Domestic Waterblast Sales</h3>
+                <h3 class="bold">US &amp; Canada Waterblast Sales</h3>
                 <p><a href="#contact-tab" data-toggle="tab">Contact us</a> directly to purchase in the US or Canada.</p>
               </div>
               <div class="col-sm-3 contact-method">
@@ -760,7 +760,7 @@ Finland</a></li>
                         </div>
                       </li>
                       <li class="list-group-item">
-                        <h2 id="Romania">Spain</h2>
+                        <h2 id="Spain">Spain</h2>
                         <div class="row">
                           <div class="col-sm-4">
                             <h4>Hammelmann S.L.</h4>
@@ -797,7 +797,7 @@ Finland</a></li>
                         </div>
                       </li>
                       <li class="list-group-item">
-                        <h2 id="Sweden">Switzerland</h2>
+                        <h2 id="Switzerland">Switzerland</h2>
                         <div class="row">
                           <div class="col-sm-4">
                             <h4>N.M. Steinbrecher AG</h4>
