--- a/waterblast-automation/powered-rotation-units.html
+++ b/waterblast-automation/powered-rotation-units.html
@@ -91,22 +91,9 @@
         
         <!-- Master Slider -->
         <div class="ms-showcase2-template">
-          <div class="master-slider ms-skin-default" id="masterslider">
+          <div class="master-slider" id="masterslider">
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-01.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-01.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-02.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-02.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-03.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-04.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/sg-e60-01.jpg" alt="Powered rotational heads for surface cleaning">
             </div>
           </div>
         </div>
@@ -501,7 +488,53 @@
   </section>
   <!-- Product extras -->
 
-  
+  <!-- Testimonials -->
+  <div class="row product-testimonials">
+    <div id="carousel-product" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-product" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-product" data-slide-to="1"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+<!--
+          <div class="insight">
+            <img src="../assets/img/quote.png" alt="quote" class="quote" />
+            <p>Lines we've only been able to poke holes in are draining like no one has seen in over 20 years.</p>
+            <p class="signed">-Dean Tramontana,<br/>La Place Equipment Co.</p>
+          </div>
+-->
+          <img src="../assets/img/sliders/sg40_swivel.jpg" alt="Powered rotation heads for surface preparation">
+        </div>
+
+        <div class="item">
+<!--
+          <div class="insight">
+            <img src="../assets/img/quote.png" alt="quote" class="quote" />
+            <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
+            <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
+          </div>
+-->
+          <img src="../assets/img/sliders/sg40_swivel.jpg" alt="Powered rotation heads for surface preparation">
+        </div>
+
+      </div><!-- End wrapper -->
+
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-product" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-product" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+  <!-- End Testimonials -->
       
   <!-- Footer CTA -->
   <div class="row footer-cta">
