--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -112,20 +112,20 @@
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
-              <a href="waterblast-automation/autobox-abx-2l.html" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a>
-              <a href="waterblast-automation/bundle-blaster.html" class="list-group-item">Bundle Blaster<span class="label label-info">Shell Side Cleaning</span></a>
-              <a href="waterblast-automation/sabertooth-flex-lancing.html" class="list-group-item">Sabertooth<span class="label label-info">Flex Lancing</span></a>
-              <a href="waterblast-automation/rigid-lance-machine.html" class="list-group-item">Rigid Lance Machine<span class="label label-info">Rigid Lancing</span></a>
-            </div>
-          </div>
-          <div class="col-sm-4 product-list">
-            <div class="list-group">
               <a href="#" class="list-group-item header">Automated Pipe Cleaning</h4>
               <a href="waterblast-automation/navigator-hose-drive.html" class="list-group-item">Navigator<span class="label label-warning">New for 2016</span></a>
               <a href="waterblast-automation/prodrive-hose-feed.html" class="list-group-item">ProDrive<span class="label label-warning">New for 2016</span></a>
               <a href="waterblast-automation/inside-diameter-pipe-cleaner.html" class="list-group-item">ID Pipe Cleaner</a>
               <a href="waterblast-automation/outside-diameter-pipe-cleaner.html" class="list-group-item">OD Pipe Cleaner</a>
+            </div>
+          </div>
+          <div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
+              <a href="waterblast-automation/autobox-abx-2l.html" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a>
+              <a href="waterblast-automation/bundle-blaster.html" class="list-group-item">Bundle Blaster<span class="label label-info">Shell Side Cleaning</span></a>
+<!--              <a href="waterblast-automation/sabertooth-flex-lancing.html" class="list-group-item">Sabertooth<span class="label label-info">Flex Lancing</span></a>-->
+              <a href="waterblast-automation/rigid-lance-machine.html" class="list-group-item">Rigid Lance Machine<span class="label label-info">Rigid Lancing</span></a>
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
               <a href="waterblast-automation/torus-tr-130.html" class="list-group-item">Torus TR-130</a>
               <a href="waterblast-automation/torus-tr-200.html" class="list-group-item">Torus TR-200</a>
               <a href="waterblast-automation/torus-positioning-booms.html" class="list-group-item">Torus Positioning Booms</a>
-              <a href="waterblast-automation/gearhead-tote-cleaner.html" class="list-group-item">Gearhead Tote Cleaner</a>
+<!--              <a href="waterblast-automation/gearhead-tote-cleaner.html" class="list-group-item">Gearhead Tote Cleaner</a>-->
               <a href="waterblast-automation/cyclone-backwall-cleaner.html" class="list-group-item">Cyclone Backwall Cleaner</a>
               <a href="waterblast-automation/pneumatic-stack-cleaner.html" class="list-group-item">Stack Cleaner</a>
               <a href="waterblast-automation/sm-air-large-tank-cleaner.html" class="list-group-item">SM-AIR Large Tank Cleaner</a>
@@ -180,6 +180,7 @@
   
   <!-- Rotary Tools -->
   <section id="rotary" class="wb-rotary header">
+<!--
     <div class="row bg-lt-grey margin-bottom-30">
       <div class="col-sm-6 heading-img">
         <img src="assets/img/banshee-big.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
@@ -187,6 +188,11 @@
       <div class="col-sm-6 heading">
         <h1>Rotary Waterblast Tools and Accessories</h1>
       </div>
+    </div>
+-->
+    
+    <div class="containter-fluid bg-lt-grey header section-header">
+      <h1>Rotary Waterblast Tools &amp; Accessories</h1>
     </div>
     
     <!-- Rotary Product List -->
@@ -198,16 +204,16 @@
             <div class="list-group">
               <a href="#" class="list-group-item header">Straight Pipe Cleaning</h4>
               <a href="#" class="list-group-item">BJV<span class="label label-info">Small &amp; Large Lines</span></a>
-              <a href="#" class="list-group-item">BJV Centralizers</a>
-              <a href="#" class="list-group-item">Gopher<span class="label label-info">Extra High Flow Rates</span></a>
+              <a href="rotary-waterblast-tools/bjv-centralizers.html" class="list-group-item">BJV Centralizers</a>
+              <a href="rotary-waterblast-tools/gopher-tube-cleaning.html" class="list-group-item">Gopher<span class="label label-info">Extra High Flow Rates</span></a>
             </div>
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
               <a href="#" class="list-group-item header">Curved Pipe Cleaning</h4>
-              <a href="#" class="list-group-item">2" Badger</a>
-              <a href="#" class="list-group-item">4" Badger</a>
-              <a href="#" class="list-group-item">6" Badger</a>
+              <a href="rotary-waterblast-tools/badger-2in-pipe-cleaning.html" class="list-group-item">2" Badger</a>
+              <a href="rotary-waterblast-tools/badger-4in-pipe-cleaning.html" class="list-group-item">4" Badger</a>
+              <a href="rotary-waterblast-tools/badger-6in-pipe-cleaning.html" class="list-group-item">6" Badger</a>
             </div>
           </div>
           <div class="col-sm-4 product-list">
@@ -229,13 +235,14 @@
           <div class="col-sm-4 product-list">
             <div class="list-group">
               <a href="#" class="list-group-item header">Rotary Swivels</h4>
-              <a href="#" class="list-group-item">Swivel Models</a>
+              <a href="rotary-waterblast-tools/rotary-swivels.html" class="list-group-item">Swivel Models</a>
             </div>
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
               <a href="#" class="list-group-item header">Waterblast Accessories</h4>
-              <a href="#" class="list-group-item">Accessories</a>
+              <a href="/rotary-waterblast-tools/nozzles-extensions.html" class="list-group-item">Nozzles and Extensions</a>
+              <a href="/rotary-waterblast-tools/backout-prevention.html" class="list-group-item">Backout Prevention</a>
             </div>
           </div>
         </div>
