downhole done, jetting added

--- a/request-catalog.html
+++ b/request-catalog.html
@@ -41,8 +41,8 @@
           <ul class="list-inline">
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="request-catalog.html">Request a Catalog</a></li>
-            <li><a href="#">Portal Login</a></li>
-            <li><a href="#"><i class="search fa fa-search search-button"></i></a></li>
+            <li><a href="#">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+            <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
         </div>
       </div>
