--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -41,8 +41,8 @@
           <ul class="list-inline">
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="#">Request a Catalog</a></li>
-            <li><a href="#">Portal Login</a></li>
-            <li><a href="#"><i class="search fa fa-search search-button"></i></a></li>
+            <li><a href="#">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+            <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
         </div>
       </div>
@@ -106,7 +106,7 @@
               <a href="waterblast-automation/striker-remote-shotgunning.html" class="list-group-item">Striker<span class="label label-warning">New for 2016</span></a>
               <a href="waterblast-automation/tunnel-cleaner.html" class="list-group-item">Tunnel Cleaner</a>
               <a href="waterblast-automation/conveyor-cleaner.html" class="list-group-item">Conveyor Cleaner</a>
-              <a href="waterblast-automation/powered-rotation-units.html" class="list-group-item">Powered Rotational Heads</a>
+              <a href="waterblast-automation/powered-rotation-units.html" class="list-group-item">Powered Rotation Units</a>
               <a href="waterblast-automation/self-rotary-heads.html" class="list-group-item">Self-Rotating Heads</a>
             </div>
           </div>
