--- a/downhole-tools.html
+++ b/downhole-tools.html
@@ -72,7 +72,7 @@
   <section class="spincat">
     <div class="row bg-lt-grey margin-bottom-30 header">
       <div class="col-sm-12 heading-img">
-        <img src="assets/img/spincat_family.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
+        <img src="assets/img/spincat_family.jpg" class="img-responsive" alt="SpinCat Downhole Wash Tools"/>
       </div>
       <div class="col-sm-12 heading">
         <h1>SpinCat</h1>
