--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
         </div>
         <!-- Row 1 -->
         <div class="row margin-bottom-20">
-          <div class="col-md-4 col-sm-4">
-            <div class="product-thumbnails padding-right-30">
+          <div class="col-md-4 col-sm-4 padding-right-30">
+            <div class="product-thumbnails">
               <img class="img-thumbnail" src="assets/img/thumb/striker.jpg" alt="">
               <a class="btn" href="#">read more +</a>
               <div class="caption">
