sewer pages done

--- a/sewer-tools-nozzles/warthog-ws.html
+++ b/sewer-tools-nozzles/warthog-ws.html
@@ -241,7 +241,7 @@
                 <ul>
                   <li><a href="../assets/pdf/manuals/WS_Half_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WS-1/2 Tool Manual</a></li>
                   <li><a href="#" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WS-1/2 Parts Breakdown</a></li>
-                  <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Tool Jetting</a></li>
+                  <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8:AM - 5:PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
