--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -107,7 +107,7 @@
           <div class="col-sm-4 product-list">
             <div class="list-group">
               <a href="#" class="list-group-item header">Large Lines  <span class="small thin">8-36 in./203-914 mm</span></a>
-              <a href="sewer-tools-nozzles/warthog-wgr-magnum.html" class="list-group-item">WGR-1 Magnum<span class="label label-info">6-36"</span></a>
+              <a href="sewer-tools-nozzles/warthog-wgr-magnum.html" class="list-group-item">WGR Magnum<span class="label label-info">6-36"</span></a>
               <a href="sewer-tools-nozzles/warthog-wg.html" class="list-group-item">WG-1<span class="label label-info">8-36"</span></a>
               <a href="sewer-tools-nozzles/warthog-wgp.html" class="list-group-item">WGP-1 (Puller)<span class="label label-info">8-36"</span></a>
               <a href="sewer-tools-nozzles/warthog-wd.html" class="list-group-item">WD 1-1/4<span class="label label-info">8-36"</span></a>
@@ -125,8 +125,8 @@
           <div class="col-sm-6 product-list">
             <div class="list-group">
               <a href="#" class="list-group-item header">Accessories</a>
-              <a href="#" class="list-group-item">Manhole Cleaner</a>
-              <a href="#" class="list-group-item">Centralizers</a>
+              <a href="sewer-tools-nozzles/manhole-cleaner.html" class="list-group-item">Manhole Cleaner</a>
+              <a href="sewer-tools-nozzles/warthog-centralizers.html" class="list-group-item">Centralizers</a>
             </div>
           </div>
         </div>
