--- a/sewer-tools-nozzles/hydro-x.html
+++ b/sewer-tools-nozzles/hydro-x.html
@@ -389,7 +389,7 @@
                   <li><a href="#" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Hydro-X Data Sheet</a></li>
 <!--
                   <li><a href="#" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WG-1 Parts Breakdown</a></li>
-                  <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Tool Jetting</a></li>
+                  <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
 -->
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8:AM - 5:PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
