--- a/sewer-tools-nozzles/warthog-wgr-magnum.html
+++ b/sewer-tools-nozzles/warthog-wgr-magnum.html
@@ -266,7 +266,7 @@
                   <li><a href="../assets/pdf/warthog_wgr_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WGR Magnum Data Sheet</a></li>
                   <li><a href="../assets/pdf/manuals/wgr_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WGR Magnum User Manual</a></li>
                   <li><a href="#" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WGR Magnum Parts Breakdown</a></li>
-                  <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Tool Jetting</a></li>
+                  <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8:AM - 5:PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
