home slider positioning

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
         </div>
+        <!-- Mobile only contact -->
+        <div class="col-sm-12">
+          <h3>+1-970-259-2869</h3>
+        </div>
+        <!-- End Mobile only contact -->
       </div>
     </div>
     <!-- Main Nav -->
