home slider positioning

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           </ul>
         </div>
         <!-- Mobile only contact -->
-        <div class="col-sm-12">
-          <h3>+1-970-259-2869</h3>
+        <div class="col-sm-12 mobile-contact">
+          <h4>1-970-259-2869</h4>
         </div>
         <!-- End Mobile only contact -->
       </div>
