finish home slider

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <h3>What are you cleaning?</h3>
       <div class="carousel-indicators">
         <a data-target="#homeSlides" data-slide-to="0" class="active" id="waterblast-tools-automated-equipment.html"><span>Heat Exchangers</span></a>
-        <a data-target="#homeSlides" data-slide-to="1" id="http://google.com"><span>Pipe Interiors</span></a>
+        <a data-target="#homeSlides" data-slide-to="1" id="#"><span>Pipe Interiors</span></a>
         <a data-target="#homeSlides" data-slide-to="2"><span>Exterior Surfaces</span></a>
         <a data-target="#homeSlides" data-slide-to="3"><span>Tanks/Vessels</span></a>
         <a data-target="#homeSlides" data-slide-to="4"><span>Furnaces/Boilers</span></a>
@@ -95,25 +95,25 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="assets/img/sliders/striker-hero-03.jpg" alt="Striker Remote Shotgunning">
+        <img src="assets/img/sliders/home/abx-2l-water.jpg" alt="AutoBox ABX-2L heat exchanger tube lancing">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/warthog-hero-03.jpg" alt="Warthog sewer jetting nozzles">
+        <img src="assets/img/sliders/home/bjv_pipe.jpg" alt="Warthog sewer jetting nozzles">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/spincat-hero-01.jpg" alt="Warthog sewer jetting nozzles">
+        <img src="assets/img/sliders/home/striker-cart.jpg" alt="Warthog sewer jetting nozzles">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/warthog-hero-03.jpg" alt="Warthog sewer jetting nozzles">
+        <img src="assets/img/sliders/home/torus_in_tank.jpg" alt="Warthog sewer jetting nozzles">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/spincat-hero-01.jpg" alt="Warthog sewer jetting nozzles">
+        <img src="assets/img/sliders/home/btc-boiler.jpg" alt="Warthog sewer jetting nozzles">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/warthog-hero-03.jpg" alt="Warthog sewer jetting nozzles">
+        <img src="assets/img/sliders/home/whp_pipe.jpg" alt="Warthog sewer jetting nozzles">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/spincat-hero-01.jpg" alt="Warthog sewer jetting nozzles">
+        <img src="assets/img/sliders/home/spincat-hero.jpg" alt="Warthog sewer jetting nozzles">
       </div>
     </div>
 
