--- a/waterblast-automation/conveyor-cleaner.html
+++ b/waterblast-automation/conveyor-cleaner.html
@@ -93,6 +93,10 @@
         <div class="ms-showcase2-template">
           <div class="master-slider ms-skin-default" id="masterslider">
             <div class="ms-slide">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/conveyor-03.jpg" alt="lorem ipsum dolor sit">
+              <img class="ms-thumb" src="../assets/img/product/thumb-conveyor-03.jpg" alt="thumb">
+            </div>
+            <div class="ms-slide">
               <img src="../assets/img/blank.gif" data-src="../assets/img/product/conveyor-01.jpg" alt="lorem ipsum dolor sit">
               <img class="ms-thumb" src="../assets/img/product/thumb-conveyor-01.jpg" alt="thumb">
             </div>
