--- a/waterblast-automation/inside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/inside-diameter-pipe-cleaner.html
@@ -93,21 +93,12 @@
         <div class="ms-showcase2-template">
           <div class="master-slider ms-skin-default" id="masterslider">
             <div class="ms-slide">
-              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-01.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-01.jpg" alt="thumb">
-                <a data-type="video" href="https://www.youtube.com/embed/3v3Y6jtWtnQ"> </a>
+              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/pipe-id-01.jpg" alt="Inside diameter pipe ID cleaner">
+              <img class="ms-thumb" src="../assets/img/product/thumb-pipe-id-01.jpg" alt="thumb">
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-02.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-02.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-03.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-04.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/pipe-id-02.jpg" alt="Inside diameter pipe ID cleaner">
+              <img class="ms-thumb" src="../assets/img/product/thumb-pipe-id-02.jpg" alt="thumb">
             </div>
           </div>
         </div>
