--- a/waterblast-automation/navigator-hose-drive.html
+++ b/waterblast-automation/navigator-hose-drive.html
@@ -93,9 +93,13 @@
         <div class="ms-showcase2-template">
           <div class="master-slider ms-skin-default" id="masterslider">
             <div class="ms-slide">
-              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/navigator-01.jpg" alt="StoneAge Striker remote shotgunning system">
-              <img class="ms-thumb" src="../assets/img/product/thumb-navigator-01.jpg" alt="thumb">
+              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/navigator-04.jpg" alt="StoneAge Striker remote shotgunning system">
+              <img class="ms-thumb" src="../assets/img/product/thumb-navigator-04.jpg" alt="thumb">
                 <a data-type="video" href="https://www.youtube.com/embed/TgKqzxyf72A"> </a>
+            </div>
+            <div class="ms-slide">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/navigator-01.jpg" alt="StoneAge Striker remote shotgunning system">
+              <img class="ms-thumb" src="../assets/img/product/thumb-navigator-01.jpg" alt="thumb">
             </div>
             <div class="ms-slide">
               <img src="../assets/img/blank.gif" data-src="../assets/img/product/navigator-02.jpg" alt="StoneAge Striker remote hydroblasting">
