--- a/waterblast-automation/pneumatic-stack-cleaner.html
+++ b/waterblast-automation/pneumatic-stack-cleaner.html
@@ -78,7 +78,7 @@
       <ul class="breadcrumb">
         <li><a href="../index.html">Home</i></a></li>
         <li><a href="../waterblast-tools-automated-equipment.html">Waterblast Tools &amp; Equipment</a></li>
-        <li class="active">Pneumatic Stack Cleaner</li>
+        <li class="active">Stack Cleaner</li>
       </ul> 
     </div>
   </div>
@@ -93,20 +93,16 @@
         <div class="ms-showcase2-template">
           <div class="master-slider ms-skin-default" id="masterslider">
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-01.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-01.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/stack-01.jpg" alt="Pneumatic stack cleaner">
+              <img class="ms-thumb" src="../assets/img/product/thumb-stack-01.jpg" alt="thumb">
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-02.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-02.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/stack-02.jpg" alt="Pneumatic stack cleaner">
+              <img class="ms-thumb" src="../assets/img/product/thumb-stack-02.jpg" alt="thumb">
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-03.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-04.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/stack-03.jpg" alt="Pneumatic stack cleaner">
+              <img class="ms-thumb" src="../assets/img/product/thumb-stack-03.jpg" alt="thumb">
             </div>
           </div>
         </div>
@@ -116,7 +112,7 @@
       <!-- Product Info -->
       <div class="col-md-6 padding-left-60">
         <div class="product-heading">
-          <h1>Pneumatic Stack Cleaner</h1>
+          <h1>Stack Cleaner</h1>
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
