--- a/waterblast-automation/yellow-jacket-boiler-cleaner.html
+++ b/waterblast-automation/yellow-jacket-boiler-cleaner.html
@@ -93,25 +93,29 @@
         <div class="ms-showcase2-template">
           <div class="master-slider ms-skin-default" id="masterslider">
             <div class="ms-slide">
-              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-01.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-01.jpg" alt="thumb">
+              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/yellow-jacket-01.jpg" alt="Yellow Jacket online boiler cleaning">
+              <img class="ms-thumb" src="../assets/img/product/thumb-yellow-jacket-01.jpg" alt="thumb">
 <!--                <a data-type="video" href="https://www.youtube.com/embed/DOFXkNg3ZVQ"> </a>-->
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-02.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-02.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/yellow-jacket-02.jpg" alt="lYellow Jacket online boiler cleaning">
+              <img class="ms-thumb" src="../assets/img/product/thumb-yellow-jacket-02.jpg" alt="thumb">
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-03.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-03.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/yellow-jacket-03.jpg" alt="Yellow Jacket online boiler cleaning">
+              <img class="ms-thumb" src="../assets/img/product/thumb-yellow-jacket-03.jpg" alt="thumb">
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-04.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/yellow-jacket-04.jpg" alt="Yellow Jacket online boiler cleaning">
+              <img class="ms-thumb" src="../assets/img/product/thumb-yellow-jacket-04.jpg" alt="thumb">
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-05.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-05.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/yellow-jacket-05.jpg" alt="Yellow Jacket online boiler cleaning">
+              <img class="ms-thumb" src="../assets/img/product/thumb-yellow-jacket-05.jpg" alt="thumb">
+            </div>
+            <div class="ms-slide">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/yellow-jacket-06.jpg" alt="Yellow Jacket online boiler cleaning">
+              <img class="ms-thumb" src="../assets/img/product/thumb-yellow-jacket-06.jpg" alt="thumb">
             </div>
           </div>
         </div>
@@ -298,50 +302,8 @@ for portability and quick assembly/disassembly</li>
   <!-- Product extras -->
 
   <!-- Product Testimonials -->
-  <div class="row product-testimonials">
-    <div id="carousel-product" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-product" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-product" data-slide-to="1"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-<!--
-          <div class="insight">
-            <img src="../assets/img/quote.png" alt="quote" class="quote" />
-            <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
-            <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
-          </div>
--->
-          <img src="../assets/img/sliders/btc_pump_house.jpg" alt="...">
-        </div>
-        
-        <div class="item">
-          <div class="insight">
-            <img src="../assets/img/quote.png" alt="quote" class="quote" />
-            <p>We’re able to operate the BTC from completely outside the boiler - not having to enter that confined space.</p>
-            <p class="signed">-Doug Mcgee,<br/>Evergreen Environmental Services</p>
-          </div>
-          <img src="../assets/img/sliders/btc-inside-drum.jpg" alt="ABX-2L cleaning small tube exchanger">
-        </div>
-
-      </div><!-- End wrapper -->
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#carousel-product" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#carousel-product" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
-    <!--=== End Product Testimonials ===-->
+  
+  <!--=== End Product Testimonials ===-->
       
   <!-- Footer CTA -->
   <div class="row footer-cta">
