--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <!-- Mobile only contact -->
         <div class="col-sm-12 mobile-contact">
-          <h4>1-970-259-2869</h4>
+          <h4><i class="fa fa-phone"></i> 1-970-259-2869</h4>
         </div>
         <!-- End Mobile only contact -->
       </div>
@@ -81,13 +81,13 @@
     <form action="#" onsubmit="window.open(whichsite(this), '_self'); return false;" class="indicator-panel">
       <h3>What are you cleaning?</h3>
       <div class="carousel-indicators">
-        <a data-target="#homeSlides" data-slide-to="0" class="active" id="waterblast-tools-automated-equipment.html"><span>Heat Exchangers</span></a>
-        <a data-target="#homeSlides" data-slide-to="1" id="#"><span>Pipe Interiors</span></a>
-        <a data-target="#homeSlides" data-slide-to="2"><span>Exterior Surfaces</span></a>
-        <a data-target="#homeSlides" data-slide-to="3"><span>Tanks/Vessels</span></a>
-        <a data-target="#homeSlides" data-slide-to="4"><span>Furnaces/Boilers</span></a>
-        <a data-target="#homeSlides" data-slide-to="5"><span>Sewer Lines</span></a>
-        <a data-target="#homeSlides" data-slide-to="6"><span>Downhole</span></a>
+        <a data-target="#homeSlides" data-slide-to="0" class="active" id="results-heat-exchangers.html"><span>Heat Exchangers</span></a>
+        <a data-target="#homeSlides" data-slide-to="1" id="results-pipe-cleaning.html"><span>Pipe Interiors</span></a>
+        <a data-target="#homeSlides" data-slide-to="2" id="results-surface-prep.html"><span>Exterior Surfaces</span></a>
+        <a data-target="#homeSlides" data-slide-to="3" id="results-tank-vessel-cleaning.html"><span>Tanks/Vessels</span></a>
+        <a data-target="#homeSlides" data-slide-to="4" id="results-furnace-boiler-cleaning.html"><span>Furnaces/Boilers</span></a>
+        <a data-target="#homeSlides" data-slide-to="5" id="sewer-tools.html"><span>Sewer Lines</span></a>
+        <a data-target="#homeSlides" data-slide-to="6" id="downhole-tools.html"><span>Downhole</span></a>
       </div>
       <input type="submit" class="btn" value="GO">
     </form>
@@ -113,7 +113,7 @@
         <img src="assets/img/sliders/home/whp_pipe.jpg" alt="Warthog sewer jetting nozzles">
       </div>
       <div class="item">
-        <img src="assets/img/sliders/home/spincat-hero.jpg" alt="Warthog sewer jetting nozzles">
+        <img src="assets/img/sliders/home/spincat-hero.jpg" alt="Downhole rotary wash tools">
       </div>
     </div>
 
