--- a/waterblast-automation/boiler-blaster.html
+++ b/waterblast-automation/boiler-blaster.html
@@ -93,21 +93,17 @@
         <div class="ms-showcase2-template">
           <div class="master-slider ms-skin-default" id="masterslider">
             <div class="ms-slide">
-              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-01.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-01.jpg" alt="thumb">
-                <a data-type="video" href="https://www.youtube.com/embed/IGYQGqs1xTQ"> </a>
+              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/boiler-blaster-02.jpg" alt="lorem ipsum dolor sit">
+              <img class="ms-thumb" src="../assets/img/product/thumb-boiler-blaster-02.jpg" alt="thumb">
+                <a data-type="video" href="https://www.youtube.com/embed/pQSV8CEHOkE"> </a>
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-02.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-02.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/boiler-blaster-03.jpg" alt="lorem ipsum dolor sit">
+              <img class="ms-thumb" src="../assets/img/product/thumb-boiler-blaster-03.jpg" alt="thumb">
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-03.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-04.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/boiler-blaster-04.jpg" alt="lorem ipsum dolor sit">
+              <img class="ms-thumb" src="../assets/img/product/thumb-boiler-blaster-04.jpg" alt="thumb">
             </div>
           </div>
         </div>
@@ -269,7 +265,7 @@
       <div class="col-md-7">
 
           <h2>Effective Surface Cleaning of Boilers and Exchangers</h2>
-          <p>The Boiler Blaster uses high pressure and flow, an adjustable head angle, and controlled traverse rates to produce exceptional and consistent cleaning performance.</p>
+          <p>The Boiler Blaster uses high pressure and flow, an adjustable head angle, and controlled traverse rates to produce exceptional and consistent cleaning.</p>
       </div>
       <div class="col-md-4 col-md-offset-1">
         <table>
