--- a/waterblast-automation/boiler-tube-cleaner.html
+++ b/waterblast-automation/boiler-tube-cleaner.html
@@ -93,25 +93,13 @@
         <div class="ms-showcase2-template">
           <div class="master-slider ms-skin-default" id="masterslider">
             <div class="ms-slide">
-              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-01.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-01.jpg" alt="thumb">
+              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/btc-01.jpg" alt="Mud Drum Boiler Tube Cleaner">
+              <img class="ms-thumb" src="../assets/img/product/thumb-btc-01.jpg" alt="thumb">
                 <a data-type="video" href="https://www.youtube.com/embed/DOFXkNg3ZVQ"> </a>
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-02.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-02.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-03.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-03.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-04.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-05.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-05.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/btc-02.jpg" alt="Mud Drum Boiler Tube Cleaner">
+              <img class="ms-thumb" src="../assets/img/product/thumb-btc-02.jpg" alt="thumb">
             </div>
           </div>
         </div>
