--- a/waterblast-automation/outside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/outside-diameter-pipe-cleaner.html
@@ -93,21 +93,12 @@
         <div class="ms-showcase2-template">
           <div class="master-slider ms-skin-default" id="masterslider">
             <div class="ms-slide">
-              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-01.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-01.jpg" alt="thumb">
-                <a data-type="video" href="https://www.youtube.com/embed/3v3Y6jtWtnQ"> </a>
+              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/pipe-od-01.jpg" alt="Outside diameter pipe OD cleaner">
+              <img class="ms-thumb" src="../assets/img/product/thumb-pipe-od-01.jpg" alt="thumb">
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-02.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-02.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-03.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/brlm-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-brlm-04.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/pipe-od-02.jpg" alt="Outside diameter pipe OD cleaner">
+              <img class="ms-thumb" src="../assets/img/product/thumb-pipe-od-02.jpg" alt="thumb">
             </div>
           </div>
         </div>
@@ -309,7 +300,7 @@ with no wasted time</li>
             <p class="signed">-Richard Bombard,<br/>PSC Industrial Services</p>
           </div>
 -->
-          <img src="../assets/img/sliders/od_at_pressure.jpg" alt="Outside Diameter Pipe Cleaner">
+          <img src="../assets/img/sliders/pipe-od-conveyor.jpg" alt="Outside Diameter Pipe Cleaner">
         </div>
 
         <div class="item">
